--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 Requerimientos para que el script funcione:
 
-#pip2 install facebook-sdk
-#pip2 install httplib2
+#pip install facebook-sdk
+#pip install httplib2
 #pip install google-api-python-client
+
+donde 'pip' es el de Python 2.
