--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-Requerimientos para que el script funcione:
+## Installation
 
 #pip install facebook-sdk
 #pip install httplib2
 #pip install google-api-python-client
 
-donde 'pip' es el de Python 2.
+using Python 2's pip.
